Improve readability by eliminating not really required constants in Security & Email related classes