@@ -1,16 +1,11 @@
 package com.example.taskmanagementapp.config;
 
-import static com.example.taskmanagementapp.constants.config.ConfigConstants.ALLOWED_ORIGINS;
-import static com.example.taskmanagementapp.constants.security.SecurityConstants.SPLITERATOR;
 import static com.example.taskmanagementapp.constants.security.SecurityConstants.STRENGTH;
 import static org.springframework.security.web.util.matcher.AntPathRequestMatcher.antMatcher;
 
-import com.example.taskmanagementapp.constants.config.ConfigConstants;
 import com.example.taskmanagementapp.security.JwtAuthenticationFilter;
-import java.util.Arrays;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -32,8 +27,6 @@ import org.springframework.web.cors.CorsConfiguration;
 public class SecurityConfig {
     private final UserDetailsService userDetailsService;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    @Value(ALLOWED_ORIGINS)
-    private String allowedOrigins;
 
     @Bean
     public PasswordEncoder getPasswordEncoder() {
@@ -42,27 +35,25 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        String[] allowedOriginsArray = allowedOrigins.split(SPLITERATOR);
         return http
                 .cors(cors -> cors.configurationSource(request -> {
                     CorsConfiguration config = new CorsConfiguration();
-                    config.setAllowedOrigins(Arrays.asList(allowedOriginsArray));
+                    config.setAllowedOrigins(List.of("http://localhost:8080"));
                     config.setAllowCredentials(true);
-                    config.setAllowedMethods(List.of(ConfigConstants.ALLOWED_METHODS));
-                    config.setAllowedHeaders(List.of(ConfigConstants.ALLOWED_HEADERS));
+                    config.setAllowedMethods(List.of("*"));
+                    config.setAllowedHeaders(List.of("*"));
                     return config;
                 }))
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(
                         auth -> auth
                                 .requestMatchers(
-                                        antMatcher(ConfigConstants.AUTH_MATCHER),
-                                        antMatcher(
-                                                ConfigConstants.USERS_CONFIRM_EMAIL_CHANGE_MATCHER),
-                                        antMatcher(ConfigConstants.SWAGGER_MATCHER),
-                                        antMatcher(ConfigConstants.SWAGGER_DOCS_MATCHER),
-                                        antMatcher(ConfigConstants.ERRORS_MATCHER),
-                                        antMatcher(ConfigConstants.ACCEPT_INVITE_TO_PROJECT_MATCHER)
+                                        antMatcher("/auth/**"),
+                                        antMatcher("/users/change-email-success"),
+                                        antMatcher("/projects/accept-invite"),
+                                        antMatcher("/swagger-ui/**"),
+                                        antMatcher("/v3/api-docs/**"),
+                                        antMatcher("/errors")
                                 )
                                 .permitAll()
                                 .anyRequest()
